# proto/gen/user/v1/user.swagger.json
@@ -137,9 +137,6 @@
         },
         "email": {
           "type": "string"
-        },
-        "password": {
-          "type": "string"
         }
       }
     },
@@ -182,9 +179,6 @@
           "type": "string"
         },
         "email": {
-          "type": "string"
-        },
-        "password": {
           "type": "string"
         },
         "events": {
